# nhl-elo

./: .gitignore  constants.py  elo.py  main.py  pyproject.toml  services.py  test.csv
data/: __init__.py  data.py  nhlApi.py
