[tool.poetry]
name = "nhl-elo"
version = "0.1.0"
description = ""
authors = ["Matthew Mercuri <mercurimatthew@gmail.com>"]
readme = "README.md"
packages = [{include = "nhl_elo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
